--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.20",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -29,9 +30,11 @@
     "eslint-plugin-vue": "^9.12.0",
     "git-cz": "^4.9.0",
     "husky": "^8.0.3",
+    "less": "^4.1.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.2",
     "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.4.2"
