--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
 		"skipLibCheck": true,
 		"noEmit": true,
 		// 解析非相对模块名的基准目录
-		"baseUrl": ".",
+		"baseUrl": "./",
 		// 模块名到基于baseurl的路径映射的列表
 		"paths": {
 			"@/": ["scr/"],
