--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/cli": "^17.6.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "@unocss/preset-wind": "^0.51.13",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -34,6 +35,7 @@
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
+    "unocss": "^0.51.13",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.2",
     "vite-plugin-eslint": "^1.8.1",
