feat: ✨ 新增路由功能，建立样式主题配置，新增ts类型声明，配置变量别名

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"jsx": "preserve",
 		"sourceMap": true,
 		"resolveJsonModule": true,
+		"allowImportingTsExtensions": true,
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		// 编译过程中需要引入的库文件的列表
@@ -22,10 +23,10 @@
 		"baseUrl": "./",
 		// 模块名到基于baseurl的路径映射的列表
 		"paths": {
-			"@/": ["scr/"],
-			"*.ts": ["*"]
+			"@/*": ["src/*"],
+			"@c/*": ["src/config/*"]
 		}
 	},
-	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "types/**.d.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
