--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.20",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.36",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.2.47",
     "vue-router": "4"
