--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.20",
+    "echarts": "^5.4.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.2.47",
+    "vue-echarts": "^6.5.5",
     "vue-router": "4"
   },
   "devDependencies": {
