--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-	"editor.codeActionsOnSave": {
-		"source.fixAll": true
-	},
-	"files.eol": "\n"
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true,
+        "source.fixAll.eslint": true
+    },
+    "files.eol": "\n"
 }
