--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "nprogress": "^0.2.0",
         "pinia": "^2.0.36",
         "pinia-plugin-persistedstate": "^3.1.0",
+        "v-scale-screen": "^2.2.0",
         "vite-plugin-vue-setup-extend": "^0.4.0",
         "vue": "^3.2.47",
         "vue-echarts": "^6.5.5",
@@ -29,7 +30,7 @@
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
         "@unocss/preset-wind": "^0.51.13",
-        "@vitejs/plugin-vue": "^4.1.0",
+        "@vitejs/plugin-vue": "^4.2.3",
         "eslint": "^8.40.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.8.0",
@@ -40,11 +41,13 @@
         "husky": "^8.0.3",
         "less": "^4.1.3",
         "lint-staged": "^13.2.2",
+        "postcss-px-to-viewport": "^1.1.1",
         "prettier": "^2.8.8",
         "typescript": "^5.0.2",
         "unocss": "^0.51.13",
         "unplugin-vue-components": "^0.24.1",
         "vite": "^4.3.2",
+        "vite-plugin-compression": "^0.5.1",
         "vite-plugin-eslint": "^1.8.1",
         "vue-tsc": "^1.4.2"
     },
