feat: ✨ 大屏重新采用vw方案适配 可惜动态类名unocss不生效

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
 		"Vue.volar",
 		"dbaeumer.vscode-eslint",
 		"esbenp.prettier-vscode",
-		"Vue.vscode-typescript-vue-plugin"
+		"Vue.vscode-typescript-vue-plugin",
+		"antfu.unocss"
 	]
 }
