--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "commit": "git-cz"
     },
     "dependencies": {
+        "@ant-design/icons-vue": "^6.1.0",
         "@vueuse/core": "^10.1.2",
         "ant-design-vue": "^3.2.20",
         "echarts": "^5.4.2",
@@ -28,9 +29,11 @@
     },
     "devDependencies": {
         "@commitlint/cli": "^17.6.3",
+        "@iconify-json/ic": "^1.1.13",
         "@types/nprogress": "^0.2.0",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
+        "@unocss/preset-icons": "^0.51.13",
         "@unocss/preset-rem-to-px": "^0.51.13",
         "@unocss/preset-wind": "^0.51.13",
         "@vitejs/plugin-vue": "^4.2.3",
