--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,18 @@
+/*
+ * @Author: linliangwei 943607147@qq.com
+ * @Date: 2023-05-15 13:40:52
+ * @LastEditors: linliangwei 943607147@qq.com
+ * @LastEditTime: 2023-05-20 19:59:05
+ * @FilePath: \Base_APP_PC\tsconfig.node.json
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ */
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts"]
+    "compilerOptions": {
+        "composite": true,
+        "skipLibCheck": true,
+        "module": "ESNext",
+        "moduleResolution": "bundler",
+        "allowSyntheticDefaultImports": true
+    },
+    "include": ["vite.config.ts"]
 }
