--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
  * @Author: linliangwei 943607147@qq.com
  * @Date: 2023-05-16 16:52:54
  * @LastEditors: linliangwei 943607147@qq.com
- * @LastEditTime: 2023-05-20 19:59:15
+ * @LastEditTime: 2023-05-20 20:27:00
  * @FilePath: \Base_APP_PC\tsconfig.json
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
  */
@@ -32,7 +32,10 @@
         // 模块名到基于baseurl的路径映射的列表
         "paths": {
             "@/*": ["src/*"],
-            "@c/*": ["src/config/*"]
+            "@c/*": ["src/components/*"],
+            "@s/*": ["src/store/module/*"],
+            "@u/*": ["src/utils/*"],
+            "@v/*": ["src/views/*"]
         }
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "types/**.d.ts"],
