--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@ant-design/icons-vue": "^6.1.0",
+        "@iconify-json/ic": "^1.1.13",
         "@vueuse/core": "^10.1.2",
         "ant-design-vue": "^3.2.20",
         "echarts": "^5.4.2",
@@ -22,19 +23,19 @@
         "pinia": "^2.0.36",
         "pinia-plugin-persistedstate": "^3.1.0",
         "vite-plugin-vue-setup-extend": "^0.4.0",
-        "vue": "^3.2.47",
+        "vue": "^3.2.36",
         "vue-echarts": "^6.5.5",
         "vue-router": "4"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.6.3",
-        "@iconify-json/ic": "^1.1.13",
         "@types/nprogress": "^0.2.0",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
         "@unocss/preset-icons": "^0.51.13",
         "@unocss/preset-rem-to-px": "^0.51.13",
         "@unocss/preset-wind": "^0.51.13",
+        "@vitejs/plugin-legacy": "^4.0.3",
         "@vitejs/plugin-vue": "^4.2.3",
         "eslint": "^8.40.0",
         "eslint-config-airbnb-base": "^15.0.0",
